--- a/index.html
+++ b/index.html
@@ -3,9 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal Portfolio Website</title>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>personal-portfolio-website</h1>
+    <!-- Top Secton Start -->
+    <section class="top-section">
+        <div class="half-width">
+            <h1>Hello, I'm <br><span class="orange-highlight">Shujan Mia</span></h1>
+            <p>I have worked on a multitude of web and print based projects for a range of clients providing Web Design (Photoshop, Illustrator, InDesign) and Development (PHP, HTML, CSS, LESS, JS, jQuery, WordPress, WooCommerce, Bootstrap, Responsive Layouts), eCommerce Solutions, Corporate Branding and Graphic Design. During my Multimedia degree I studied Information Architecture, and therefore have a keen understanding of wireframes, sitemaps and user experience design which I put to good use on every project I work on.</p>
+            <a class="link-button" target="_balk" href="https://www.facebook.com/sujon.mahamud.2009/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/top-section-image.png" alt="shujan_image">
+        </div>
+    </section>
+    <!-- Top Secton End -->
+
+    <!-- Dream11 Secton Start -->
+    <section class="about-section">
+        <div class="half-width">
+            <img src="images/about-section-image.png" alt="shujan_image">
+        </div>
+        <div class="half-width">
+            <h2>About</h2>
+            <p>Ialready learned the basic HTML and CSS. Now I started by using HTML/CSS templates that I could easily implement and customize and I cranked out several websites in this fashion. It also helped to refresh and expand my limited development knowledge base.I have worked on a multitude of web and print based projects for a range of clients providing Web Design (Photoshop, Illustrator, InDesign) and Development (PHP, HTML, CSS, LESS, JS, jQuery, WordPress, WooCommerce, Bootstrap, Responsive Layouts), eCommerce Solutions.  My Dream I will be a top-level Web Developer in Bangladesh.  </p>
+            <a class="link-button" target="_balk" href="https://www.facebook.com/sujon.mahamud.2009/">DOWNLOAD CV</a>
+        </div>
+    </section>
+    <!-- Dream11 Secton Start -->
+
+    <div style="clear:both"></div>
+
+    <section class="project-section">
+        <h2 id="heading-padding"> <span class="red-highlight">LASTET</span>  WORKING PROJECT</h2>
+        <div class="three-part">
+            <img src="images/gym-website-image.png" alt="">
+            <h3>Power-x-gym (gym website)</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+        <div class="three-part">
+            <img src="images/agency-website-image.png" alt="">
+            <h3>Creative Agency</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+        <div class="three-part">
+            <img src="images/music-website-image.png" alt="">
+            <h3>Hard Rock Music</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+    </section>
+
+        <section class="bottom-section">
+            <div class="focus">
+                <div class="left-part">
+                    <h2>Work Inquiry</h2>
+                </div>
+                <div class="right-part">
+                    <a href="#">Lat's Chat</a>
+                </div>
+            </div>
+            <div class="copyright">
+                <h3> &copy; Shujan Mia 2021. All right reserved</h3>
+            </div>  
+        </section>
+
+
+
 </body>
 </html>
