--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </section>
     <!-- Top Secton End -->
 
-    <!-- Dream11 Secton Start -->
+    <!-- Aout Secton Start -->
     <section class="about-section">
         <div class="half-width">
             <img src="images/about-section-image.png" alt="shujan_image">
@@ -32,7 +32,7 @@
             <a class="link-button" target="_balk" href="https://www.facebook.com/sujon.mahamud.2009/">DOWNLOAD CV</a>
         </div>
     </section>
-    <!-- Dream11 Secton Start -->
+    <!-- about Secton End -->
 
     <div style="clear:both"></div>
 
@@ -68,8 +68,5 @@
                 <h3> &copy; Shujan Mia 2021. All right reserved</h3>
             </div>  
         </section>
-
-
-
 </body>
 </html>
